styles.css
* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
  text-decoration: none;
}

:root {
  --gray: #e0dee2;
  --lightred: #dd7a6f;
  --lightbrown: #a88b73;
  --brownpurple: #6d5459;
  --teal: #39a6a8;
}

body {
  font-family: "Nunito Sans", sans-serif;
  display: flex;
  flex-direction: column;
  justify-content: center;
  margin: 20px auto 0px;
  color: #222;
  text-align: center;
  font-size: 20px;
  min-height: 100vh;
  /* border: 1px solid black; */
}

.container {
  display: flex;
  flex-direction: column;
  /* background: lightgoldenrodyellow; */
  width: 100%;
  max-width: 80%;
  /* max-width: 1600px; */
  height: fit-content;
  border: 1px solid black;
}

/* Navbar */
#navbar {
  display: flex;
  justify-content: center;
  width: 100%;
  padding: 1rem 0rem;
  border-bottom: 1px solid #222;
}

nav {
  display: flex;
  justify-content: space-between;
  align-items: center;
  padding: 1rem 2rem;
  flex-direction: row;
  font-family: "Nunito Sans", sans-serif;
  width: 80%;
  max-width: 1600px;
}

.nav-logo {
  border: 3px solid #222;
  padding: 10px;
  border-radius: 50%;
  transition: all 0.1s ease;
}
.nav-logo img {
  height: 40px;
  width: 40px;
}

.nav-logo:hover {
  transform: scale(1.1);
}

nav ul {
  display: flex;
  flex-direction: row;
  list-style: none;
  gap: 80px;
  font-weight: bold;
  margin: 0;
  padding: 0;
}

nav li a {
  color: #222;
  text-decoration: none;
  transition: color 0.3s ease;
}

nav li a:hover {
  color: var(--lightred);
}

.nav-buttons {
  display: flex;
  gap: 0.6rem;
}

.btn {
  padding: 0.8rem 1.4rem;
  border: none;
  border-radius: 5px;
  cursor: pointer;
  font-size: 1.2rem;
  transition: background-color 0.3s ease;
  font-weight: bold;
  font-family: Arial, sans-serif;
}

.btn-primary {
  background-color: var(--teal);
  color: #fff;
}

.btn-primary:hover {
  background-color: var(--lightred);
}

.btn-secondary {
  background-color: transparent;
  transition: all 0.3s ease;
}

.btn-secondary:hover {
  color: var(--lightred);
}

/* Media Queries */
@media (max-width: 1200px) {
  nav {
    width: 95%;
  }

  .nav-links {
    gap: 40px;
  }
}

@media (max-width: 992px) {
  #navbar {
    display: none;
  }

  /* Mobile Navbar */
  #mobile-navbar {
    display: flex;
    justify-content: space-between;
    align-items: center;
    padding: 1rem 2rem;
    flex-direction: row;
    font-family: "Nunito Sans", sans-serif;
    width: 100%;
    height: 100px;
    max-width: 1000px;
    padding-bottom: 25px;
    border-bottom: 1px solid #c5c5c5;
    position: relative;
  }

  .mobile-navbar-content {
    display: flex;
    justify-content: space-between;
    align-items: center;
    width: 100%;
    max-width: 1000px;
  }

  .nav-logo {
    position: absolute;
    text-align: center;
    left: 50%;
    transform: translateX(-50%);
  }

  .nav-logo img {
    width: 40px;
    height: 40px;
  }
  .mobile-menu-btn img {
    padding-top: 10px;
  }

  .menu-icon {
    width: 50px;
    height: 50px;
  }
}

@media (max-width: 768px) {
  .nav-links {
    flex-direction: column;
    align-items: center;
    gap: 20px;
  }

  .nav-buttons {
    flex-direction: column;
    align-items: center;
  }
}

/* Hero section */
.hero {
  margin: 350px auto;
  width: 100%;
  height: auto;
  position: relative;
}

.hero-background {
  width: 100%;
  padding-top: 56.25%;
  /* 16:9 aspect ratio */
  background-image: url("./images/osaka-hero2.png");
  background-size: cover;
  background-position: center;
  position: relative;
  z-index: 1;
}

.hero-content {
  position: absolute;
  top: -27%;
  left: 0;
  width: 100%;
  height: 100%;
  z-index: 2;
  text-align: center;
  padding: 150px 0;
}

.hero-text {
  text-align: center;
  width: 100%;
  left: 0;
}

.hero .hero-heading {
  font-size: 200px;
  text-transform: uppercase;
  text-align: center;
  font-family: "Fraunces", serif;
  font-weight: 800;
  letter-spacing: 2px;
}

.hero h3 {
  font-size: 40px;
  text-align: center;
  font-family: "Fraunces", serif;
  font-weight: 600;
  letter-spacing: 2px;
}

@media (max-width: 1200px) {
  .hero .hero-heading {
    font-size: 120px;
  }

  .hero h3 {
    font-size: 36px;
  }
}

@media (max-width: 768px) {
  .hero .hero-heading {
    font-size: 80px;
  }

  .hero h3 {
    font-size: 24px;
  }
}

/* Featured Cards */
.featured-cards {
  margin: 0 auto;
  padding: 100px 20px;
  font-family: "Fraunces", serif;
  font-size: 40px;
  /* background: lightgoldenrodyellow; */
  width: 100%;
  display: flex;
  flex-direction: column;
  align-items: center;
}

h2 {
  padding-bottom: 30px;
}

.cards {
  margin-top: 40px;
  display: grid;
  grid-template-columns: repeat(3, 1fr);
  gap: 50px;
}

.card {
  border: 1px solid black;
  border-radius: 12px;
  position: relative;
  width: 350px;
  height: 600px;
  display: flex;
  flex-direction: column;
}

.card {
  width: 300px;
  height: 500px;
  background-image: linear-gradient(
      to bottom,
      rgba(0, 0, 0, 0.3),
      rgba(0, 0, 0, 0)
    ),
    url("./images/osaka-castle.png");
  background-size: cover;
  background-position: center;
  border-radius: 12px;
  box-shadow: 3px 3px 1px black;
  transition: all 0.3s ease;
  position: relative;
}

.card:hover {
  box-shadow: 7px 6px 1px var(--teal);
}

.card-2 {
  background-image: linear-gradient(
      to bottom,
      rgba(0, 0, 0, 0.3),
      rgba(0, 0, 0, 0)
    ),
    url("./images/takoyaki.png");
}

.card-3 {
  background-image: linear-gradient(
      to bottom,
      rgba(0, 0, 0, 0.3),
      rgba(0, 0, 0, 0)
    ),
    url("./images/namba-1.png");
}

.card h4 {
  font-size: 40px;
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  text-align: center;
  color: #fff;
  text-shadow: 2px 2px 0px black;
}

.card-details {
  border-radius: 12px;
  height: 40%;
  display: flex;
  flex-direction: column;
  justify-content: center;
  background-color: #fff;
}

.card-details p {
  font-size: 20px;
  text-align: left;
  padding-left: 20px;
  font-family: "Nunito Sans", sans-serif;
  color: #222;
}

.material-symbols-outlined {
  font-size: 30px;
  position: absolute;
  bottom: 20px;
  right: 20px;
  color: #fff;
  border: 1px solid #fff;
  background-color: var(--brownpurple);
  border-radius: 50%;
  padding: 10px;
  cursor: pointer;
  transition: all 0.3s ease;
}

.material-symbols-outlined:hover {
  border: 1px solid var(--teal);
  background-color: var(--teal);
}

/* Guide */
.guide {
  margin: auto;
  font-family: "Fraunces", serif;
  font-size: 30px;
  background-color: lightcyan;
  width: 100%;
  display: flex;
  justify-content: center;
  height: auto;
  padding: 30px 0px 50px;
  border-radius: 15px;
  align-items: center;
}

.guide-container {
  display: flex;
  max-width: 1200px;
  height: 100%;
  justify-content: center;
  align-items: center;
  text-align: center;
}
.guide-image {
  background-image: url("./images/shinji-kun.png");
  background-size: contain;
  background-repeat: no-repeat;
  background-position: center;
  width: 40%;
  height: 400px; /* explicity setting height shows the image*/
}

.guide-text {
  padding: 40px 40px 0px 10px;
  width: 60%;
  height: 100%;
  display: flex;
  flex-direction: column;
  justify-content: start;
  align-items: start;
  text-align: left;
}

.text p {
  margin: 30px 0px;
  font-size: 24px;
  color: #222;
}

.email {
  width: 100%;
  text-align: left;
  margin-top: 10px;
  display: flex;
  /* position: relative; */
}

input {
  flex: 1; /* allows input to grow and take up available space */
  max-width: 500px; /**/
  height: 60px;
  font-size: 18px;
  border-radius: 5px;
  border: none;
  padding-left: 13px;
  display: inline-block;
}

input:focus {
  outline: none;
  border: 0.5px solid var(--teal);
}

#subsribe {
  flex: 0 0 auto; /* allows input to grow and take up available space */
  min-width: 140px; /**/
  height: 60px;
  font-size: 18px;
  border-top-right-radius: 5px;
  border-bottom-right-radius: 5px;
  border: 0.5px solid var(--teal);
  background-color: var(--teal);
  color: #fff;
  cursor: pointer;
  transition: all 0.3s ease;
}

#subsribe:hover {
  background-color: var(--lightred);
  border: 0.5px solid var(--lightred);
}

@media (max-width: 899px) {
  .guide {
    flex-direction: column;
    padding: 60px 0;
  }
  .guide-container {
    display: flex;
    flex-direction: column;
  }

  .guide-image {
    width: 90%;
    height: 300px;
    margin-bottom: 20px;
  }
  .guide-text {
    padding: 20px 0px;
    width: 85%;
  }
  .text p {
    font-size: 20px;
  }
  .text h3 {
    text-align: center;
  }
  .email {
    flex-direction: column;
    /* ensures full width to the children */
  }
  .email input,
  #subsribe {
    max-width: 98%; /* stretches input and button to just under full width */
    margin-bottom: 10px;
    height: 50px !important;
    border-radius: 3px;
  }
  input {
    height: 50px !important;
    padding: 15px 0px 15px 10px; /**/
  }
  .email {
    display: flex;
    flex-direction: column;
  }
}

/* Footer */
footer {
  width: 100%;
  height: auto;
  color: #111;
  font-family: "Nunito Sans", sans-serif;
  font-weight: bold;
  font-size: 18px;
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  padding: 50px 0px 0px;
  list-style-type: none;
  position: relative;
  background-color: rgb(255, 255, 232);
  border-radius: 12px;
  position: relative;
}

.footer-image {
  width: 100%;
  height: 100px;
  padding-top: 56%;
  /* 16:9 aspect ratio */
  background-image: url("./images/footer-bg2.png");
  background-size: contain;
  background-position: center;
  background-repeat: no-repeat;
  position: relative;
  z-index: 1;
}

.footer-content {
  width: 100%;
  max-width: 1200px;
  margin: 0 auto;
  position: relative;
  padding: 60px 20px 30px;
}

.footer-upper {
  display: flex;
  justify-content: space-between;
  margin-bottom: 30px;
  padding: 0px 80px;
  z-index: 2;
  width: 100%;
  align-items: center;
}

.footer-links {
  list-style: none;
}

.footer-links ul {
  list-style: none;
  text-align: left;
  display: flex;
  flex-direction: column;
  gap: 20px;
  font-family: "Nunito Sans", sans-serif;
}

.footer-links ul li a {
  color: #222;
  transition: all 0.3s ease;
  cursor: pointer;
  font-size: 18px;
}

.footer-links ul li a:hover {
  color: var(--lightred);
}

.footer-text {
  display: flex;
  flex-direction: column;
  justify-content: center;
  font-size: 15px;
  width: 100%;
  align-items: center;
}

.footer-icons {
  display: flex;
  gap: 20px;
  justify-content: center;
  align-items: center;
}

.footer-icons img {
  width: 30px;
  height: 30px;
  cursor: pointer;
  transition: all 0.3s ease;
}

.footer-icons img:hover {
  transform: scale(1.1);
  color: var(--lightred);
}

@media (max-width: 899px) {
  .footer-upper {
    flex-direction: column;
    gap: 40px;
    padding: 0px 40px !important;
  }

  .footer-links ul {
    text-align: center;
    font-size: 16px;
  }

  .footer-links ul li {
    text-align: center;
    font-size: 16px;
  }
}

